            Added coefficient of restitution as a nonlinear function of friction coefficient.
Added insurance that the skater won't pass through a spline while in free-fall.
Removed some bogus collision code (for handling ends of spline).
Added code that prevents the skater from bouncing back and forth centered on a track.
Added save/load for splines & skaters.

1.02.11 (11-3-2006)
Made the "Return The Skater" button pop up when the skater is partially offscreen (rather than when he is completely offscreen).
Bugfix: The man jiggles around when on a nearly horizontal piece of track.

1.02.10 (11-3-2006)
Added a "Step" button to playback, live, and record modes.
Added another mechanism to reduce energy errors in spline traversal mode.
            This prevents the problem where the skater gets stuck at a high point at slow velocity.

1.02.09 (11-2-2006)
Improvements in spline traversal.
Consolidate top/bottom splines.
Rewrote Track Toolbox to work at different scales.
Track Toolbox code is more elegant.
Fixed: Dragging a control point of the skater's track can cause him to freeze.
Fixed: Track graphic is stopping one segment before the end of the track.

1.02.08 (10-25-2006)
Removed track graphic at ground-level.
Added friction to ground.
Added preliminary collision code to avoid getting stuck in a track (needs more testing).

1.02.07 (10-18-2006)
Bugfixes in old references to FreeSplineMode (1st version)

1.02.06 (10-18-2006)
Added improved frame sizes for deployment
Added tests
Bugfix in spline traversal (if error is too high, rollback change, don't use global energy)

1.02.05 (10-18-2006)
Rewrote spline traversal physics.
Added tests.

1.02.03 (10-11-2006)
Added smoothing for spline traversal (to smooth out jerkiness e.g. at bottom of parabola)
Added code so the skater can fall off of spline when his velocity dotted with the unit normal of the segment is positive.
Found an instance of unconserved energy and remedied it.